force-app/main/default/objects/Claim_Event_Log__c/Claim_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Claim Event Log</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Claim Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>