force-app/main/default/objects/Claim_Event_Log__c/fields/EventSubType__c.field-meta.xml
<CustomField>
    <fullName>EventSubType__c</fullName>
    <label>Event Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>