force-app/main/default/objects/Claim_Event_Log__c/fields/TimeCompleted__c.field-meta.xml
<CustomField>
    <fullName>TimeCompleted__c</fullName>
    <label>Time Completed</label>
    <type>DateTime</type>
</CustomField>